attemp to fix grey background on mobile

--- a/test/test.css
+++ b/test/test.css
@@ -24,6 +24,7 @@ body {
   padding: 40px;
   font-size: 1.8em;
   font-family: 'Liberation Serif', serif;
+  background-color: white;
 }
 
 .footer {
